--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             </div>
             <div class="modal-body"></div>
             <div class="modal-footer">
-                <a class="btn btn-primary full-article" role="button" target="_blank" rel="noopener noreferrer">Читать полностью</a>
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
+                <a class="btn btn-primary full-article" role="button" target="_blank" rel="noopener noreferrer"></a>
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"></button>
             </div>
         </div>
     </div>
